Bug 916662 - Fix failed assertions and correctness errors on ARM. r=shu, a=lsblakk